# Kiriko

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yml
crates/kiriko-core/: Cargo.toml
crates/kiriko-project/: Cargo.toml
crates/kiriko-ui/: Cargo.toml
crates/kiriko-ui/src/: app_state.rs  export.rs  icons.rs  lib.rs  native_menu.rs  pixels.rs  shell.rs
crates/luminal-ui/: Cargo.toml
crates/lumit-app/: Cargo.toml
crates/lumit-app/src/: main.rs
crates/lumit-audio/: Cargo.toml
crates/lumit-bridge/: Cargo.toml
crates/lumit-cache/: Cargo.toml
crates/lumit-core/: Cargo.toml
crates/lumit-eval/: Cargo.toml
crates/lumit-flow/: Cargo.toml
crates/lumit-gpu/: Cargo.toml
crates/lumit-media/: Cargo.toml
crates/lumit-project/: Cargo.toml
crates/lumit-text/: Cargo.toml
crates/lumit-ui/: Cargo.toml
docs/: 00-VISION.md  01-GLOSSARY.md  02-DECISIONS.md  03-DATA-MODEL.md  04-RETIMING.md  05-ARCHITECTURE.md  06-RENDER-PIPELINE.md  07-UI-SPEC.md  08-EFFECTS.md  09-AUDIO.md  10-FILE-FORMAT.md  11-AE-IMPORT.md  12-PLUGINS.md  13-PERFORMANCE-RULES.md  14-ENGINEERING-RULES.md  15-DESIGN.md  16-ROADMAP.md  18-BRIDGE-CONTRACT.md  GUIDE.md  README.md  TODO.md  implementation-audit-2026-07-20.md  implementation-dependency-graph.md  test-feedback-log.md
docs/archive/: README.md  audit-2026-07-19.md  test-feedback-log.md
docs/flutter-port/: 05-PARITY-CHECKLIST.md  06-REMAINING-WORK.md
docs/impl/: README.md  beat-detection.md  expressions.md  gpu-foundation.md  lut.md  (+9 more)
flutter_ui/: .metadata  README.md  pubspec.yaml
scripts/: win-dev-env.ps1
(+176 files in other folders)
