[package]
name = "kiriko-ui"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
egui = "0.31"
kiriko-core = { path = "../kiriko-core" }
kiriko-project = { path = "../kiriko-project" }
rfd = "0.15"
uuid = { version = "1", features = ["v7"] }
egui_dock = { version = "0.16", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
